--- a/06-pie/index.html
+++ b/06-pie/index.html
@@ -6,8 +6,18 @@
     <title>饼图 - 图表设计规范</title>
     <script src="https://cdn.jsdelivr.net/npm/@antv/g2plot@2.4.31/dist/g2plot.min.js"></script>
     <link rel="stylesheet" href="../common.css">
+    <script src="../responsive-spec.js"></script>
 </head>
 <body>
+
+<div class="back-nav">
+    <a href="../data-agent.html" class="back-btn">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <polyline points="15 18 9 12 15 6"></polyline>
+        </svg>
+        返回数据分析
+    </a>
+</div>
 
 <div class="page-header">
     <div class="chart-type-badge" style="background: linear-gradient(135deg, #FFF7E6 0%, #FFE7BA 100%);">
@@ -242,6 +252,12 @@
 <script>
 const { Pie, Rose } = G2Plot;
 
+// 响应式参数
+const mobile = ChartSpec.isMobile();
+const labelFontSize = mobile ? 10 : 10;
+const radius = mobile ? 0.88 : 0.8;
+const labelOffset = mobile ? 10 : 12;
+
 const data = [
     { type: '线上直销', value: 4500 },
     { type: '线下门店', value: 3200 },
@@ -254,10 +270,10 @@ new Pie('chart-basic', {
     data,
     angleField: 'value',
     colorField: 'type',
-    radius: 0.8,
+    radius: radius,
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#E86452', '#945FB9'],
-    label: { type: 'outer', content: '{name} {percentage}', style: { fontSize: 11 } },
-    legend: { position: 'right' },
+    label: { type: 'outer', content: '{name} {percentage}', style: { fontSize: labelFontSize }, offset: labelOffset },
+    legend: { position: 'right', itemName: { style: { fontSize: mobile ? 9 : 11 } } },
     interactions: [{ type: 'element-active' }],
 }).render();
 
@@ -265,14 +281,14 @@ new Pie('chart-donut', {
     data,
     angleField: 'value',
     colorField: 'type',
-    radius: 0.8,
+    radius: radius,
     innerRadius: 0.6,
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#E86452', '#945FB9'],
-    label: { type: 'inner', offset: '-50%', content: '{percentage}', style: { fontSize: 10, textAlign: 'center', fill: '#fff' } },
-    legend: { position: 'right' },
+    label: { type: 'inner', offset: '-50%', content: '{percentage}', style: { fontSize: mobile ? 8 : 10, textAlign: 'center', fill: '#fff' } },
+    legend: { position: 'right', itemName: { style: { fontSize: mobile ? 9 : 11 } } },
     statistic: {
-        title: { content: '总计', style: { fontSize: 11 } },
-        content: { content: '13,000', style: { fontSize: 16 } },
+        title: { content: '总计', style: { fontSize: mobile ? 10 : 11 } },
+        content: { content: '13,000', style: { fontSize: mobile ? 14 : 16 } },
     },
 }).render();
 
@@ -281,10 +297,13 @@ new Rose('chart-rose', {
     xField: 'type',
     yField: 'value',
     seriesField: 'type',
-    radius: 0.9,
+    radius: mobile ? 0.88 : 0.9,
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#E86452', '#945FB9'],
-    legend: { position: 'right' },
+    legend: { position: 'right', itemName: { style: { fontSize: mobile ? 9 : 11 } } },
 }).render();
+
+// 初始化响应式
+ChartSpec.init();
 </script>
 
 
