--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>指标卡 - 图表设计规范</title>
     <link rel="stylesheet" href="../common.css">
+    <script src="../responsive-spec.js"></script>
     <style>
         .chart-type-badge {
             display: inline-flex; align-items: center; gap: 8px;
@@ -21,7 +22,11 @@
             margin: 20px 0;
         }
         @media (max-width: 768px) { 
-            .indicator-grid { grid-template-columns: repeat(2, 1fr); }
+            .indicator-grid { 
+                grid-template-columns: repeat(2, 1fr); 
+                gap: 10px;
+                margin: 12px 0;
+            }
         }
         
         .indicator-card {
@@ -31,16 +36,28 @@
             box-shadow: 0 1px 2px rgba(0,0,0,0.05);
             border: 1px solid #E8E8E8;
         }
+        @media (max-width: 768px) {
+            .indicator-card {
+                padding: 12px;
+                border-radius: 6px;
+            }
+        }
         .indicator-card .label {
             font-size: 13px;
             color: #8C8C8C;
             margin-bottom: 8px;
         }
         .indicator-card .value {
-            font-size: 28px;
+            font-size: var(--indicator-value-size, 28px);
             font-weight: 600;
             color: #262626;
             line-height: 1.2;
+        }
+        @media (max-width: 768px) {
+            .indicator-card .value { font-size: 20px; }
+            .indicator-card .label { font-size: 10px; margin-bottom: 4px; }
+            .indicator-card .trend { font-size: 9px; margin-top: 4px; }
+            .indicator-card .suffix { font-size: 11px; }
         }
         .indicator-card .suffix {
             font-size: 14px;
@@ -96,6 +113,15 @@
     </style>
 </head>
 <body>
+
+<div class="back-nav">
+    <a href="../data-agent.html" class="back-btn">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <polyline points="15 18 9 12 15 6"></polyline>
+        </svg>
+        返回数据分析
+    </a>
+</div>
 
 <div class="page-header">
     <div class="chart-type-badge">
@@ -302,6 +328,10 @@ import { ArrowUpOutlined, ArrowDownOutlined } from '@ant-design/icons';
 </div>
 
 
+<script>
+// 初始化响应式
+ChartSpec.init();
+</script>
 <script src="../nav.js"></script>
 </body>
 </html>
